<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>438</width>
    <height>710</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <property name="styleSheet">
   <string notr="true">#submitButton{
	background-color: rgb(255, 221, 109);
	border-radius: 20px;
}
</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <widget class="QWidget" name="componentWidget" native="true">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
      <width>438</width>
      <height>710</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true"/>
    </property>
    <widget class="QLabel" name="lineDesign_2">
     <property name="geometry">
      <rect>
       <x>310</x>
       <y>0</y>
       <width>301</width>
       <height>741</height>
      </rect>
     </property>
     <property name="text">
      <string/>
     </property>
     <property name="pixmap">
      <pixmap>Line Design.svg</pixmap>
     </property>
    </widget>
    <widget class="QWidget" name="titleWidget_2" native="true">
     <property name="geometry">
      <rect>
       <x>100</x>
       <y>30</y>
       <width>257</width>
       <height>211</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_2">
      <item>
       <widget class="QLabel" name="gameTitle_4">
        <property name="font">
         <font>
          <family>Porter Sans Block</family>
          <pointsize>26</pointsize>
         </font>
        </property>
        <property name="text">
         <string>Guess</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLabel" name="gameTitle_5">
        <property name="font">
         <font>
          <family>Porter Sans Block</family>
          <pointsize>26</pointsize>
         </font>
        </property>
        <property name="text">
         <string>The</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLabel" name="gameTitle_6">
        <property name="font">
         <font>
          <family>Porter Sans Block</family>
          <pointsize>26</pointsize>
         </font>
        </property>
        <property name="text">
         <string>Number</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLabel" name="gameTitle_7">
        <property name="font">
         <font>
          <family>Porter Sans Block</family>
          <pointsize>26</pointsize>
         </font>
        </property>
        <property name="text">
         <string>FROM</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLabel" name="gameTitle_8">
        <property name="font">
         <font>
          <family>Porter Sans Block</family>
          <pointsize>26</pointsize>
         </font>
        </property>
        <property name="text">
         <string>1-10</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
    <widget class="QPushButton" name="submitButton">
     <property name="geometry">
      <rect>
       <x>140</x>
       <y>530</y>
       <width>180</width>
       <height>70</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>Porter Sans Block</family>
       <pointsize>16</pointsize>
      </font>
     </property>
     <property name="text">
      <string>Submit</string>
     </property>
    </widget>
    <widget class="QLabel" name="randonNumbers_2">
     <property name="geometry">
      <rect>
       <x>-30</x>
       <y>420</y>
       <width>481</width>
       <height>361</height>
      </rect>
     </property>
     <property name="text">
      <string/>
     </property>
     <property name="pixmap">
      <pixmap>Random Numbers.png</pixmap>
     </property>
    </widget>
    <widget class="QLineEdit" name="numInput">
     <property name="geometry">
      <rect>
       <x>140</x>
       <y>430</y>
       <width>180</width>
       <height>70</height>
      </rect>
     </property>
    </widget>
    <zorder>randonNumbers_2</zorder>
    <zorder>lineDesign_2</zorder>
    <zorder>titleWidget_2</zorder>
    <zorder>submitButton</zorder>
    <zorder>numInput</zorder>
   </widget>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
